# QuantTradeAI

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  LLM.md  Makefile  README.md  TEMP.md  pyproject.toml  requirements.txt  roadmap.md  setup.py  verify_config_loading.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pre-commit-ci.yml
.github/workflows/: ci.yml
config/: backtest_config.yaml  features_config.yaml  impact_config.yaml  model_config.yaml  position_manager.yaml  project.yaml  risk_config.yaml  streaming.yaml
docs/: API_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  configuration.md  getting-started.md  llm-sentiment.md  phase1-analysis.md  quick-reference.md
docs/api/: README.md  backtesting.md  data.md  features.md  models.md  streaming.md  trading.md  utils.md
docs/configuration/: legacy-configs.md  live-runtime-files.md  project-yaml.md
docs/examples/: execution-costs.md  streaming.md
quanttradeai/: __init__.py  cli.py  deployment.py  main.py
quanttradeai/agents/: __init__.py  backtest.py  base.py  batch.py  context.py  factory.py  llm.py  model_agent.py  paper.py  rule.py  runner.py
quanttradeai/backtest/: __init__.py  backtester.py  engine.py  impact.py  intrabar.py
quanttradeai/brokers/: __init__.py  alpaca.py  base.py  runtime.py
quanttradeai/data/: __init__.py  datasource.py  loader.py  processor.py
quanttradeai/features/: __init__.py  custom.py  sentiment.py  technical.py
quanttradeai/models/: __init__.py  classifier.py
quanttradeai/streaming/: __init__.py  auth_manager.py  connection_pool.py  env_vars.py  gateway.py  history.py  live_trading.py  logging.py  rate_limiter.py  replay.py  stream_buffer.py  websocket_manager.py
quanttradeai/trading/: __init__.py  drawdown_guard.py  portfolio.py  position_manager.py  risk.py  risk_manager.py
quanttradeai/utils/: __init__.py  config_schemas.py  config_validator.py  experiment_brief.py  impact_loader.py  metrics.py  project_config.py  project_paths.py  project_runtime.py  promotion.py  run_brief.py  run_compare.py  run_records.py  run_result.py  run_scoreboard.py  sweeps.py  visualization.py
src/: main.py
src/backtest/: backtester.py
src/data/: datasource.py  loader.py  processor.py
src/features/: __init__.py  custom.py  technical.py
src/models/: classifier.py
src/utils/: __init__.py  config_schemas.py  metrics.py  visualization.py
tests/: conftest.py  test_config_validator.py  test_project_config_cli.py
tests/agents/: test_context.py  test_llm.py  test_model_agent.py  test_paper.py  test_rule.py
tests/backtest/: test_advanced_execution.py  test_backtester.py  test_execution_costs.py  test_impact_defaults.py  test_market_impact.py
tests/brokers/: test_alpaca.py  (+1 more)
(+68 files in other folders)
